Ensure column sets don't collapse (they are used empty in the cart for example).

--- a/assets/stylesheets/magento-boilerplate/layouts/_col-sets.scss
+++ b/assets/stylesheets/magento-boilerplate/layouts/_col-sets.scss
@@ -29,6 +29,7 @@
 
   [class^="col-"] {
     @include grid-column(12);
+    min-height: 1px;
   }
 }
 
